fix #4: prepare for release

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=SofwareSerial (MCCI version)
-version=2.0.0
+name=MCCI_SoftSerial
+version=3.0.0
 author=Chiara Ruggeri (chiara@arduino.org)
 maintainer=Terry Moore <tmm@mcci.com>
 sentence=Software UART for Arduino
 paragraph=This library allows any pair of pins to be used as a UART implemented by software. The MCCI version incorporates bug fixes and makes it more compatible with the UART and USB serial classes.
 category=Communication
-url=https://github.com/mcci-catena/SoftwareSerial
+url=https://github.com/mcci-catena/MCCI_SoftSerial
 architectures=*
